FIX POPUP ALIGNMENT

--- a/carin-frontend/src/components/setupGame/editConfig/SelectConfiguration.css
+++ b/carin-frontend/src/components/setupGame/editConfig/SelectConfiguration.css
@@ -17,3 +17,24 @@
 
   color: #7eaf3b;
 }
+
+.config-popup-box {
+  position: fixed;
+  background: #00000050;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+}
+
+.config-text-box{
+  display: inline-block;
+  color: black;
+  height: 100%;
+  width: 100%;
+}
+
+.config-container {
+  justify-content: space-around;
+  align-items: center;
+}
