--- a/carin-frontend/src/components/setupGame/editGenetic/GeneticForm.css
+++ b/carin-frontend/src/components/setupGame/editGenetic/GeneticForm.css
@@ -14,7 +14,7 @@
     margin: 0 auto;
     height: auto;
     max-height: 70vh;
-    margin-top: calc(100vh - 85vh - 20px);
+    margin-top: calc(100vh - 65vh - 20px);
     background: rgb(253, 211, 211);
     color: black;
     border-radius: 4px;
@@ -24,18 +24,18 @@
   }
   
   .close-icon {
-    content: 'x';
     cursor: pointer;
     position: fixed;
-    right: calc(15% - 30px);
-    top: calc(100vh - 85vh - 33px);
-    background: #751e1e;
-    width: 25px;
-    height: 25px;
+    right: 45vh;
+    top: 5vh;
+    background-image: url("../../../elements/textInput/Close.png");
+    background-position: center;
+    background-size: cover;
+    width: 75px;
+    height: 75px;
     border-radius: 50%;
     line-height: 20px;
     text-align: center;
-    border: 1px solid #999;
     font-size: 20px;
   }
  
